<resources>
    <string name="app_name">TP4</string>
    <string name="btnScanner">Scanner</string>
    <string name="addProduct">Add Product</string>
    <string name="btnPayer">Pay</string>
    <string name="total">Total: %d $</string>
    <string name="productNotFound">The product code scanned was not found in the collection</string>
    <string name="duplicateProduct">The product you scanned is already in the list</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="code">Barcode</string>
    <string name="empty_products">Empty products</string>
    <string name="create_products">Create products</string>
    <string name="fill_list">Fill products list</string>
    <string name="not_enough_products">Not enough products to generate list</string>
    <string name="product_invalid">Product entered is invalid</string>
    <string name="cancel">Cancel</string>
    <string name="no_product_to_pay">No products to pay</string>
    <string name="transaction">Transaction</string>
    <string name="not_enough_money">Not enough money given</string>
    <string name="total_change">Total change: </string>
    <string name="not_enough_money_in_bank">Not enough money in bank</string>
    <string name="show_caisse">Show money</string>
    <string name="too_much_money_in_bank" >Too much money in bank</string>
    <string name="is_2_for_1">Is 2 for 1</string>
    <string name="set_tax_limit">Set Taxable Limit</string>
</resources>
